--- a/README
+++ b/README
@@ -30,7 +30,6 @@ TODO:
 TOASK:
 	tilda https://www.gnu.org/software/bash/manual/html_node/Tilde-Expansion.html#Tilde-Expansion
 	
-
-
 TODO:
+	parse for " / ' closing . \ ";))))))))))))))
 	
