added replace_string f

--- a/README
+++ b/README
@@ -32,5 +32,14 @@ TOASK:
 	
 TODO:
 	parse for " / ' closing . \ ";))))))))))))))
-	make printchar;
-	
+	signal 	
+
+
+
+
+
+
+
+
+
+	rad gnomikov c KOLPAKami ZEL ILI;
