--- a/README
+++ b/README
@@ -1,7 +1,3 @@
-so be sure to code the cleanest, simplest program possible. 
-Otherwise, you’ll probably have 2 start from scratch for your 21sh
-and that would be a real shame.
-
 malloc, free
 access
 open, close, read, write
@@ -31,6 +27,17 @@ TOASK:
 	tilda https://www.gnu.org/software/bash/manual/html_node/Tilde-Expansion.html#Tilde-Expansion
 	
 TODO:
-	parse for " / ' closing . \ ";))))))))))))))
-	signal 	
+
+1)
+cd ~realdir
+echo ~realdir ~wrongdir
+
+2)
+/bin/ls -l		-a
+/bin/ls: illegal option --
+usage: ls [-ABCFGHLOPRSTUWabcdefghiklmnopqrstuwx1] [file ...]
+
+3) semicolon ; bug???????
+
+4) PATH perm.denied
 
