--- a/README
+++ b/README
@@ -1,48 +1,1 @@
-malloc, free
-access
-open, close, read, write
-opendir, readdir, closedir
-getcwd, chdir
-stat, lstat, fstat
-
-fork, execve
-wait, waitpid, wait3, wait4 
-signal, kill
-exit
-
-TODO: 
--echo;
--cd;
--setenv;
--unsetenv;
--env;
--exit.
-
-
-! errno ADAPT!
-! PATH and ENV (copy of system char **environ)
-! 
-
-TOASK:
-	tilda https://www.gnu.org/software/bash/manual/html_node/Tilde-Expansion.html#Tilde-Expansion
-	
-TODO:
-
-OK 1)
-cd ~realdir
-echo ~realdir ~wrongdir
-
-OK 2)
-/bin/ls -l		-a
-/bin/ls: illegal option --
-usage: ls [-ABCFGHLOPRSTUWabcdefghiklmnopqrstuwx1] [file ...]
-
-OK 3) semicolon ; bug???????
-
-4) PATH perm.denied: def lost in fork (?)
-
-OK 5) if PATH is NULL => "no command!" no such file or dir
-
-OK 6) empty input: " " " <tab>"
-6.1) >    echo
-
+done
